# epos

./: Changes  Makefile.am  Makefile.common  Makefile.in  THANKS  WELCOME  WELCOME.MacOSX  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac
arch/: Makefile.am  Makefile.in  data_dirs.am  data_files.am  version.h
arch/dos/: README.dos  bepos.bpr  config.in  epos.cpp  say.bpr
arch/unix/: commat  difftgz  docopts  doctwk.sed  longopts  makedate  makever  test.optdoc  test.version
arch/unix/upload/: README  lastchanges.append  lastchanges.sed  mail.append  upload
arch/win/: README.CODEPAGE  config.in  config.in.orig  configure.bat  convert.bat  epos.dsp  epos.dsw  epos.ini  eposm.dsp  instserv.dsp  say.dsp
arch/win-ce/: config.in  configure.bat  epos.vcp  epos.vcw  say.vcp  stdlib.cpp
arch/win/service/: globals.h  install.cpp  service.cpp  service.h  startsrv.cpp
cfg/: Makefile.am  Makefile.in  data_dirs.am  data_files.am
cfg/cfg/: ansi.ini  ansihdr.txt  epos.ini  fixed.ini  restr.ini  rtf.ini  rtfftr.txt  rtfhdr.txt  winepos.ini
cfg/inv/: README
cfg/inv/lpc/: README-vq  kubec.lab  kubec.snl  mkubec.vq  mkubec.vqc  mvichova.vq  mvichova.vqc  traditnl.dpt
cfg/lng/czech/: basenum.dic  betty.dph  betty.rul  casual.dic  czech.ini  czech.rul  dubeda.dph  encoding.ini  interj.dic  lpcpros.rul  machac_pros.tim  machac_seg.tim  main.dic  mathsign.dic  neurallog.txt  numerals.rul  postps.dic  preps.dic  prosody.neu  prosody.rul  prosody_bang.neu  prosody_lpc_bang.neu  prosody_lpc_bang_phone.neu  short.dic  spellout.dic  spellurl.dic  stress.rul  syll.dic  text.txt  textn.txt  traditnl.dph  trans.rul  wh.dic
cfg/lng/czech/nnet/: bang.txt  lpcbang.txt  lpcbangphone.txt
cfg/lng/czech/prosody/: README  accent.dic  exclafad.dic  exclaim.dic  fadeoutp.dic  fadeoutq.dic  fadeouts.dic  fadeoutw.dic  ir_unter.dic  irony.dic  naive.rul  nonterm.dic  questend.dic  questup.dic  shorten.dic  shortiso.dic  stress.dic  wh.dic
cfg/lng/french/: encoding.ini  french.ini  french.rul  text.txt
cfg/lng/german/: german.ini  german.rul  joerg.dph  lengths.dic  text.txt
cfg/lng/latin/: basenum.dic  betty.dph  betty.rul  classical.dph  latin.ini  latin.rul  mathsign.dic  numerals.rul  ptacek97.dph  quantitas.dic  stress.rul  syll.dic  trans.rul  wh.dic
cfg/lng/slovak/: TOCHECK  basenum.dic  encoding.ini  hard.dic  main.dic  mathsign.dic  nonsyl.dic  numerals.rul  preps.dic  roman.dic  roman.rul  slovak.dph  slovak.ini  slovak.rul  spellout.dic  spellurl.dic  traditnl.dph  trans.rul  wh.dic
cfg/lng/slovak.prev/: abbrevs.dic  basenum.dic  main.dic  mathsign.dic  nnet.rul  numerals.rul  palkova.rul  postp2.dic  preps.dic  skratky.dic  slovak.ini  slovak.rul  syll.dic  textm.txt  traditnl.dph.all  traditnl.dph.sk  trans.rul  wh.dic
cfg/lng/slovak.prev/txt/: blondinka.txt  jumis.txt  kofi.txt  sedlak.txt  text.txt.rozhlas  text.txt.sedlak  text.txt.sikula
cfg/lng/vogon/: relabel.dic  vogon.ini  vogon.rul
cfg/mappings/: 8859-1.txt  8859-2.txt  README  sampa-alt-cz1.txt  sampa-std.txt
cfg/ttscp/help/: appl  data  delh  done  down  intr  pass  setg  setl  show  strm  user
cfg/voice/czech/: bob.ini  bob8.ini  jiri.ini  kubec-f.ini  kubec-f8.ini  kubec-vq.ini  kubec.ini  machac.ini  machac8.ini  machac_bang.ini  machac_bang8.ini  machac_bang_smooth.ini  machac_lpc_bang.ini  machac_lpc_bang8.ini  machac_lpc_bang_phone.ini  machac_lpc_bang_phone8.ini  machac_lpp.ini  machac_lpp8.ini  mbr.ini  r-kubec.ini  r-machac.ini  r-vichov.ini  r-violka.ini  theimer.ini  vichova-f.ini  vichova-vq.ini  vichova.ini  violka.ini  violka16.ini  violka8.ini  violka_lpp.ini
cfg/voice/german/: joerg.ini
cfg/voice/latin/: benedictus.ini  caesar.ini  hildegard.ini  linnaeus.ini
cfg/voice/slovak/: igor.ini
cfg/voice/vogon/: jeltz.ini
doc/: COPYING  FAQ  FORMATS  Files  Intro  Makefile.am  Makefile.in  Todo  arch.sgml  devel.sgml  footer.sgml  header.sgml  intro.sgml  options.sgml  rules.sgml  security.sgml  ttscp.sgml
libs/: Makefile.am  Makefile.in  README  data_files.am
libs/portaudio/: Makefile.am  Makefile.in  README
libs/regex/: Makefile.am  Makefile.in  rx.c  rx.h
src/: Makefile.am  Makefile.in  agent.cc  agent.h  block.cc  client.cc  client.h  common.h  daemon.cc  encoding.cc  encoding.h  endian_utils.h  epos.h  exc.cc  exc.h  function.cc  function.h  gauge-epos.cc  hash.cc  hash.h  hashd.cc  hashi.cc  hashtmpl.h  interf.cc  interf.h  lpcsyn.cc  lpcsyn.h  marker.cc  mbrsyn.cc  mbrsyn.h  monolith.cc  nonblock.cc  options.cc  options.h  options.lst  parser.cc  parser.h  qnxipc.cc  rule.cc  rule.h  (+19 more)
src/nnet/: Makefile.am  Makefile.in  base.h  enumstring.cc  enumstring.h  iterator.h  map.cc  map.h  matrix.cc  matrix.h  neural.cc  neural.cc.h  neural.h  neural_parse.cc  neural_parse.h  neural_parse.yy  nnettypes.h  pair.h  perceptron.cc  perceptron.h  percinit.cc  percstruct.cc  percstruct.h  set.h  slowstring.h  stream.cc  stream.h  traindata.cc  traindata.h  trainprocess.h  utils.cc  utils.h  vector.h  xml.cc  xml.h  xml_parse.cc  xml_parse.h  xml_parse.yy  xmlstream.h  xmltempl.cc  (+3 more)
src/tests/: Makefile.am  Makefile.in  hard_zero_data_test.cc  intr_test.cc  legal_data_test.cc  long_data_test.cc  long_strm_test.cc  random_data_test.cc  shutdown_test.cc  soft_zero_data_test.cc  syn2_test.cc  testbench.cc  testbench.h  vogon_test.cc
