##	Process this file with automake run in the top directory to yield Makefile.in

include $(top_srcdir)/Makefile.common

noinst_LTLIBRARIES = libeposnnet.la

libeposnnet_la_SOURCES=base.h enumstring.cc enumstring.h iterator.h \
map.cc map.h matrix.cc matrix.h neural.cc.h neural.h stream.h stream.cc \
neural_parse.yy neural.cc pair.h perceptron.cc perceptron.h \
percinit.cc percstruct.cc percstruct.h set.cc set.h slowstring.h \
traindata.cc traindata.h trainprocess.h nnettypes.h utils.cc utils.h \
vector.h xml.cc xml.h xmlstream.h xmltempl.cc xmltempl.h \
xmlutils.cc xmlutils.h xml_parse.yy xml_parse.h


